--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testCompile 'com.codeborne:selenide:4.3'
+    compile group: 'org.testng', name: 'testng', version: '6.11'
 }
 
 task runTests(type: Test) {
